# fore

./: .gitignore  README.md  fore.cabal  fore.js
examples/: output.js
js/: base.js  classes.js  instances.js  io.js  primitives.js  rts.js
src/: Main.hs
