name:                fore
version:             0.1.0.0
synopsis:            compiler etc
description:         etc
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules: Fore
  other-modules:
  hs-source-dirs: src
  build-depends:   base >= 4 && < 5